scrollbar mobile fix attempt

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,11 @@
 @import "../styles/colors.scss";
 
 ::ng-deep {
+
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    
     ::-webkit-scrollbar {
     width: 11.5px;
     }
